--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<! DOCTYPE html>  
-<html>  
+<!DOCTYPE html>  
 <head>  
 <meta name="viewport" content="width=device-width, initial-scale=1">  
 <meta charset="UTF-8">  
 <title> JavaScript editable table </title>  
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">  
-<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
+<link rel="nofollow" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">  
+<link rel="nofollow" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
 <link rel="stylesheet" href="css/main.css">
 </head>  
 
@@ -58,7 +57,6 @@
       <td class="exp"> 1 </td>  
     </tr>  
   </tbody>
-</form>
 </table>
 
 <form name = "f1">
