--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <main>
 <h1> Table of employees. Average experience calculation </h1>
 <h3>Soroka Kateryna. KIUKI 19-8. Variant 6</h3>  
-<table summary="Editable table with datasets ordered in columns" class="table-fill">  
+<table class="table-fill">  
   <tbody>  
     <tr>
       <th scope="col"> Number </th> 
